Make variations and functions modular.